services/stock/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goodfood-stock
spec:
  selector:
    app: goodfood-stock
  ports:
    - name: "grpc"
      port: 50009
      targetPort: 50009
status:
  loadBalancer: {}
