services/stock/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodfood-stock
spec:
  ingressClassName: nginx
  rules:
    - host: stock.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: goodfood-stock
                port:
                  number: 50009
            path: /
